Bug 413091 - Information Panel shows almost no information inside Trash
Summary: Information Panel shows almost no information inside Trash
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-17 16:01 UTC by Patrick Silva
Modified: 2020-04-27 20:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments
screenshot (68.19 KB, image/png)
2019-10-17 16:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-10-17 16:01:46 UTC
SUMMARY
See the attached screenshot please.
"Size" is always "Unknown", "Modified" and "Accessed" dates are never shown.

STEPS TO REPRODUCE
1. send some files to trash
2. open Trash


EXPECTED RESULT
Information Panel shows "Size", "Modified" and "Accessed" dates

Operating System: Arch Linux 
KDE Plasma Version: 5.17.0
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1
Comment 1 Patrick Silva 2019-10-17 16:02:18 UTC
Created attachment 123280 [details]
screenshot
Comment 2 Nate Graham 2019-10-17 16:09:20 UTC
Is this a regression? I'm not sure I recall this working better in the past.
Comment 3 Méven Car 2019-10-18 06:13:17 UTC
So the size should be the size of files in the trash, modified last time a file was added to the trash.
The accessed date is kind of weird for a trash, last time you opened the trash has not much value.
Comment 4 Nate Graham 2019-10-18 12:19:20 UTC
(In reply to Méven Car from comment #3)
> So the size should be the size of files in the trash, modified last time a
> file was added to the trash.
> The accessed date is kind of weird for a trash, last time you opened the
> trash has not much value.
Yeah for the trash itself, maybe we should just not show this piecee of information.
Comment 5 Méven Car 2019-10-20 14:08:38 UTC
Git commit 52fa2deb944dccfce7fd740b0b441706ab77e451 by Méven Car.
Committed on 20/10/2019 at 14:08.
Pushed by meven into branch 'master'.

Allow non-local directories to provide UDS_SIZE

Summary:
FIXED-IN: 19.12

Relates to D24773

Reviewers: ngraham, elvisangelaccio, bruns, #dolphin

Reviewed By: elvisangelaccio, #dolphin

Subscribers: #baloo

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D24774

M  +5    -0    src/filemetadataprovider.cpp

https://commits.kde.org/baloo-widgets/52fa2deb944dccfce7fd740b0b441706ab77e451
Comment 6 Nate Graham 2019-10-21 04:09:39 UTC
Not quite; will be fully fixed with https://phabricator.kde.org/D24773.
Comment 7 Patrick Silva 2020-01-18 13:40:06 UTC
The same occurs when we select any entry under Remote, Recent, Search for and Tags sections of places panel.
Comment 8 Méven Car 2020-04-14 05:41:20 UTC
Git commit 570b48e656c792dfd9fd2314ab77b84afca87da0 by Méven Car.
Committed on 14/04/2020 at 05:41.
Pushed by meven into branch 'master'.

kio_trash: Add size, modification, access and create date for trash:/

Summary:
FIXED-IN: 5.70

Reviewers: #frameworks, ngraham, elvisangelaccio, dfaure

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24773

M  +21   -0    src/core/kfileitem.cpp
M  +11   -0    src/core/kfileitem.h
M  +4    -0    src/core/udsentry.h
M  +2    -3    src/ioslaves/trash/kio_trash.cpp
M  +30   -4    src/ioslaves/trash/trashimpl.cpp
M  +5    -0    src/ioslaves/trash/trashimpl.h
M  +50   -25   src/ioslaves/trash/trashsizecache.cpp
M  +14   -0    src/ioslaves/trash/trashsizecache.h

https://commits.kde.org/kio/570b48e656c792dfd9fd2314ab77b84afca87da0
Comment 9 Méven Car 2020-04-14 05:42:10 UTC
Git commit 50fdd3e154ffac3b4b42cc03735255aca8272ae8 by Méven Car.
Committed on 14/04/2020 at 05:42.
Pushed by meven into branch 'master'.

Use KFileItem::recursiveSize to Display recursize size as total size

Summary:
This allows to display the trash:/ occupied space

Test Plan: {F8231067}

Reviewers: #dolphin, ngraham, elvisangelaccio, dfaure

Reviewed By: #dolphin, ngraham, elvisangelaccio, dfaure

Subscribers: #baloo

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D28738

M  +1    -1    CMakeLists.txt
M  +5    -2    src/filemetadataprovider.cpp

https://commits.kde.org/baloo-widgets/50fdd3e154ffac3b4b42cc03735255aca8272ae8
Comment 10 Nate Graham 2020-04-14 14:57:29 UTC
*** Bug 420067 has been marked as a duplicate of this bug. ***
Comment 11 Méven Car 2020-04-25 20:15:03 UTC
Git commit 44c4f46b584b4337944d4611eaa3419701616970 by Méven Car.
Committed on 25/04/2020 at 20:14.
Pushed by meven into branch 'master'.

FileMetaDataWidget: Avoid showing fields when they have no value

Summary:
When displaying remote:/ recentlyused:/, Search:/ or and Tags:/, the information panel shows modifications time, access time and size with empty field value.
This patches avoids displaying those fields when we have no value for them.
More precisely https://bugs.kde.org/show_bug.cgi?id=413091#c7

Test Plan:
Open remote:/ in Dolphin:
Size, Access and modification dates fields are not visible

Reviewers: #dolphin, ngraham, bruns

Reviewed By: #dolphin, ngraham, bruns

Subscribers: #baloo

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D28972

M  +12   -8    src/filemetadataprovider.cpp

https://commits.kde.org/baloo-widgets/44c4f46b584b4337944d4611eaa3419701616970