Allow non-local directories to provide UDS_SIZE

Summary:
FIXED-IN: 19.12
BUG: 413091

Relates to D24773

Reviewers: ngraham, elvisangelaccio, bruns, #dolphin

Reviewed By: elvisangelaccio, #dolphin

Subscribers: #baloo

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D24774